Notes fixes
